adds html5 tags

--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <html>
     <head><title>Yong Park Recipe</title></head>
     <body>
+      <header>
       <h2>Mac and Cheese</h2>
-
-      <ul>
-        <li><a href="description">Description</a></li>
-        <li><a href="ingredients">Ingredients</a></li>
-        <li><a href="directions">Directions</a></li>
-      </ul>
-
-      <h2 id="description">Description</h2>
-
-      <p>Mac and Cheese recipe</p>
-
-      <a href="https://en.wikipedia.org/wiki/Macaroni_and_cheese">Mac and Cheese</a>
-
-      <img href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Original_Mac_n_Cheese_.jpg/220px-Original_Mac_n_Cheese_.jpg" />
-
+      <img src="https://d3c5s1hmka2e2b.cloudfront.net/uploads/topic/image/4/appacademy.png" alt="App Academy Logo">
+      <nav>
+        <ul>
+          <li><a href="description">Description</a></li>
+          <li><a href="ingredients">Ingredients</a></li>
+          <li><a href="directions">Directions</a></li>
+        </ul>
+      </nav>
+    </header>
+    <aside>
       <h2 id="ingredients">Ingredients</h2>
 
       <ul>
         <li>mac</li>
         <li>cheese</li>
       </ul>
+
+    </aside>
+    <section>
+      <h2 id="description">Description</h2>
+
+      <p>Mac and Cheese recipe</p>
+      <figure>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Original_Mac_n_Cheese_.jpg/220px-Original_Mac_n_Cheese_.jpg" alt="Mac and Cheese"/>
+        <figcaption>
+            <a href="https://en.wikipedia.org/wiki/Macaroni_and_cheese">Mac and Cheese</a>
+        </figcaption>
+      </figure>
+
 
       <h2 id="directions">Directions</h2>
 
@@ -31,8 +40,10 @@
         <li>Shred cheese on top after draining.</li>
         <li>Bake for 30 @ 350.</li>
       </ol>
-
-      <p>Original recipe by Yong Park</p>
-
+    </section>
+    <footer>
+      <p>Recipe from <a href="https://www.google.com">Google</a></p>
+    </footer>
     </body>
+
 </html>
