--- a/index.html
+++ b/index.html
@@ -41,6 +41,35 @@
         <li>Bake for 30 @ 350.</li>
       </ol>
     </section>
+    <section id="reviews">
+      <form action="/reviews" method="post">
+        <label for"name">Name</label>
+        <input id="name" type="text" name="name">
+
+        <label for"rating">Rating</label>
+          1<input type="radio" name="rating" value="1" checked>
+          2<input type="radio" name="rating" value="2">
+          3<input type="radio" name="rating" value="3">
+          4<input type="radio" name="rating" value="4">
+          5<input type="radio" name="rating" value="5">
+
+          <label for "cookingexpertise">Cooking Expertise<label>
+
+            <select id="expertise" name="expertise">
+            <option value="Select Cooking Expertise" disabled="true" selected="true">Select Cooking Expertise</option>
+            <option value="Somtimes Cook">Sometimes Cook</option>
+            <option value="Cook Everyday">Cook Everyday</option>
+            <option value="Cooking is a Hobby"><Cooking is a Hobby</option>
+            <optino value="Professional Chef">Professional Chef</option>
+
+          </select>
+
+       <label>Review
+         <textarea name="review" cols="20" rows="10"></textarea>
+       </label>
+
+    </section>
+
     <footer>
       <p>Recipe from <a href="https://www.google.com">Google</a></p>
     </footer>
