--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <html>
-    <head><title>Yong Park Recipe</title></head>
+    <head><title>Yong Park Recipe</title>
+    <link rel="stylesheet" href="css.css" type="text/css"/>
+    <meta name = "description" content = "recipe mac and cheese pasta">
+    <meta charset="utf-8">
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-12345678-9', 'auto');
+    ga('send', 'pageview');
+
+    </script>
+    <script src="../../assets/external_javascript_example.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../..assets/css_reset.css" type="text/css"/>
+    </head>
     <body>
       <header>
       <h2>Mac and Cheese</h2>
@@ -15,7 +31,7 @@
     <aside>
       <h2 id="ingredients">Ingredients</h2>
 
-      <ul>
+      <ul class="ingredients-list">
         <li>mac</li>
         <li>cheese</li>
       </ul>
@@ -42,7 +58,7 @@
       </ol>
     </section>
     <section id="reviews">
-      <form action="/reviews" method="post">
+      <form id="review-form" action="/reviews" method="post">
         <label for"name">Name</label>
         <input id="name" type="text" name="name">
 
