--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head><title>Yong Park Recipe</title>
+    <link rel="stylesheet" href="css_custom_reset.css" type="text/css"/>
+    <link rel="stylesheet" href="custom_grid.css" type="text/css"/>
     <link rel="stylesheet" href="css.css" type="text/css"/>
     <meta name = "description" content = "recipe mac and cheese pasta">
     <meta charset="utf-8">
@@ -28,6 +30,7 @@
         </ul>
       </nav>
     </header>
+    <div class="col col-1-3">
     <aside>
       <h2 id="ingredients">Ingredients</h2>
 
@@ -37,6 +40,10 @@
       </ul>
 
     </aside>
+    </div>
+
+    <div class="col col-2-3">
+
     <section>
       <h2 id="description">Description</h2>
 
@@ -60,18 +67,18 @@
     <section id="reviews">
       <form id="review-form" action="/reviews" method="post">
         <label for"name">Name</label>
-        <input id="name" type="text" name="name">
+        <input id="name" type="text" name="name" class="col-1-3">
 
-        <label for"rating">Rating</label>
+
           1<input type="radio" name="rating" value="1" checked>
           2<input type="radio" name="rating" value="2">
           3<input type="radio" name="rating" value="3">
           4<input type="radio" name="rating" value="4">
           5<input type="radio" name="rating" value="5">
 
-          <label for "cookingexpertise">Cooking Expertise<label>
 
-            <select id="expertise" name="expertise">
+
+            <select id="expertise" name="expertise" class="col-1-3">
             <option value="Select Cooking Expertise" disabled="true" selected="true">Select Cooking Expertise</option>
             <option value="Somtimes Cook">Sometimes Cook</option>
             <option value="Cook Everyday">Cook Everyday</option>
@@ -80,11 +87,12 @@
 
           </select>
 
-       <label>Review
+        <label class="col-2-3">Review
          <textarea name="review" cols="20" rows="10"></textarea>
        </label>
 
     </section>
+  </div>
 
     <footer>
       <p>Recipe from <a href="https://www.google.com">Google</a></p>
