--- a/index.html
+++ b/index.html
@@ -24,15 +24,24 @@
       <img src="https://d3c5s1hmka2e2b.cloudfront.net/uploads/topic/image/4/appacademy.png" alt="App Academy Logo">
       <nav>
         <ul>
-          <li><a href="description">Description</a></li>
-          <li><a href="ingredients">Ingredients</a></li>
-          <li><a href="directions">Directions</a></li>
+          <li><a href="#description">Description</a></li>
+          <li><a href="#ingredients">Ingredients</a></li>
+          <li><a href="#directions">Directions</a></li>
         </ul>
+        <ul class="hamburger-dropdown">
+          <li>
+            <ul>
+              <li><a href="#description">Description</a></li>
+              <li><a href="#ingredients">Ingredients</a></li>
+              <li><a href="#directions">Directions</a></li>
+            </ul>
+          </li>
+      </ul>
       </nav>
     </header>
     <div class="col col-1-3">
     <aside>
-      <h2 id="ingredients">Ingredients</h2>
+       <h2 id="ingredients">Ingredients</h2>
 
       <ul class="ingredients-list">
         <li>mac</li>
@@ -56,7 +65,7 @@
       </figure>
 
 
-      <h2 id="directions">Directions</h2>
+      <h2 id="description">Description</h2>
 
       <ol>
         <li>Cook mac.</li>
